[package]
name = "conduit_iface"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
thiserror = "1.0.26"
anyhow = "1.0.42"

rusqlite = { version = "0.31", features = ["bundled"], optional = true }
heed = { git = "https://github.com/timokoesters/heed.git", rev = "f6f825da7fb2c758867e05ad973ef800a6fe1d5d", optional = true }
persy = { version = "1.2", optional = true }

[dependencies.rocksdb]
package = "rust-rocksdb"
version = "0.25"
optional = true
features = [
    "multi-threaded-cf",
    "zstd",
    "lz4",
]

[features]
default = []

sqlite = ["rusqlite"]
