[package]
name = "conduit_migrate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0.41"
conduit_iface = { path = "../iface/", default-features = false }
thiserror = "1.0.26"

[features]
default = ["sqlite", "rocksdb"]

persy = ["conduit_iface/persy"]
heed = ["conduit_iface/heed"]
sqlite = ["conduit_iface/sqlite"]
rocksdb = ["conduit_iface/rocksdb"]
